--- a/index.html
+++ b/index.html
@@ -110,7 +110,25 @@
         </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page(opens in new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Youtube Page(opens in new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram Page(opens in new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+
+        </ul>
     </footer>
     <script src="https://kit.fontawesome.com/dce6083355.js" crossorigin="anonymous"></script>
 </body>
