--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook Page(opens in new tab)"><i class="fab fa-facebook"></i></a>
@@ -124,7 +124,7 @@
                     aria-label="Visit our Youtube Page(opens in new tab)"><i class="fab fa-youtube-square"></i></a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram Page(opens in new tab)"><i class="fab fa-instagram"></i></a>
             </li>
 
