--- a/gallery.html
+++ b/gallery.html
@@ -18,14 +18,27 @@
         </a>
         <nav>
             <ul id="menu">
-
                 <li><a href="#">Sign up</a></li>
                 <li><a href="gallery.html" class="active">Gallery</a></li>
                 <li><a href="index.html">Home</a></li>
             </ul>
-
         </nav>
     </header>
+
+    <section id="photos">
+        <img src="assets/images/gallery/athletes.jpg" alt="Two athletes running together">
+        <img src="assets/images/gallery/girls.jpg" alt="Three girls at charity paint running festival">
+        <img src="assets/images/gallery/runner3.jpg" alt="Solo male runner running on a beach">
+        <img src="assets/images/gallery/man.jpg" alt="Man at charity paint running festival">
+        <img src="assets/images/gallery/runner1.jpg" alt="Solo female runner jogging through Phoenix park">
+        <img src="assets/images/gallery/runner2.jpg" alt="Runners competing in marathon">
+        <img src="assets/images/gallery/runner4.jpg" alt="Solo female runner jogging on a beach">
+        <img src="assets/images/gallery/running_gang.jpg"
+            alt="Large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/gallery/mud-run.jpg"
+            alt="Two women runners taking a mudddy selfie after the Mud Runners Championship">
+
+    </section>
 
     <footer>
         <ul class="social-networks">
